# openapi

./: Cargo.toml  search-index.js
openapi/v3_0/: struct.Header.html  struct.Parameter.html
src/openapi/v3_0/: schema.rs.html
src/v3_0/: schema.rs
